--- a/sass/modules/event-details/_event-details.scss
+++ b/sass/modules/event-details/_event-details.scss
@@ -434,3 +434,7 @@
         }
     }
 }
+
+#tribe-events-pg-template {
+    padding: 0 !important;
+}
