--- a/sass/partials/_menu-sidebar.scss
+++ b/sass/partials/_menu-sidebar.scss
@@ -7,6 +7,10 @@
     i {
       color: $white;
       font-size: 22px;
+
+      @include rmaxwd(991) {
+        color: $black;
+      }
     }
   }
 }
